--- a/vignettes/original/_match_weight_02_application.Rmd
+++ b/vignettes/original/_match_weight_02_application.Rmd
@@ -23,7 +23,8 @@ vignette: >
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  dpi = 45
 )
 ```
 
