--- a/vignettes/original/_match_weight_01_methods.Rmd
+++ b/vignettes/original/_match_weight_01_methods.Rmd
@@ -15,7 +15,8 @@ vignette: >
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  dpi = 45
 )
 ```
 
